tests/error/poly_errors_py312/non_droppable1.py
from hugr import tys

from guppylang.decorator import guppy


@guppy.type(tys.Tuple(), droppable=False)
class NonDroppable:
    pass


@guppy
def main[D: NonDroppable]() -> None:
    pass


guppy.compile(main)
