tests/error/poly_errors_py312/non_droppable1.err
Error: Invalid parameter (at $FILE:12:12)
   | 
10 | 
11 | @guppy
12 | def main[D: NonDroppable]() -> None:
   |             ^^^^^^^^^^^^ Non-droppable type `NonDroppable` is not allowed as a
   |                          generic parameter

Guppy compilation failed due to 1 previous error
